--- a/ai4sc0/_config.yml
+++ b/ai4sc0/_config.yml
@@ -26,7 +26,7 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/li-positive-one/AI4SC from Zero  # Online location of your book
+  url: https://github.com/li-positive-one/AI4SC0  # Online location of your book
   path_to_book: docs  # Optional path to your book, relative to the repository root
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
