--- a/ai4sc0/_toc.yml
+++ b/ai4sc0/_toc.yml
@@ -3,13 +3,15 @@
 
 format: jb-book
 root: intro
-
 parts:
 - caption: 教程
   chapters:
+  - file: pytorch_base
   - file: python
-  - file: pytorch
   - file: fno
+  - file: notebooks
+  - file: markdown
 - caption: 补充
   chapters:
   - file: material
+  - file: markdown-notebooks
