--- a/ai4sc0/_toc.yml
+++ b/ai4sc0/_toc.yml
@@ -16,6 +16,7 @@ parts:
     sections: 
     - file: pytorch_install
     - file: pytorch_basic
+    - file: pytorch_solver
   - file: neuraloperator
     sections:
     - file: fno
